--- a/style.css
+++ b/style.css
@@ -2149,7 +2149,9 @@ a.bg-danger:focus, a.bg-danger:hover { background-color: #c9302c; }
 
 header { border: none; position: relative; }
 
-header::after { content: ''; position: absolute; bottom: 0; left: -999px; right: -999px; height: 1px; background: #999; }
+header > div { margin-bottom: 2em; }
+
+header > div::after { content: ''; position: absolute; bottom: 0; left: -999px; right: -999px; height: 1px; background: #999; }
 
 header .topline { margin-bottom: 2em; margin-top: 2em; }
 
